Fix the alignment of the chat app timer.

--- a/chat/static/css/chat.css
+++ b/chat/static/css/chat.css
@@ -240,7 +240,11 @@
 .discuss-time-text {
     font-weight: bold;
     font-size: 20px;
-    line-height: 45px;
+    line-height: 20px;
+}
+
+#discuss-timer {
+    margin-bottom: 15px;
 }
 
 #discuss-timer.expired {
